--- a/index.html
+++ b/index.html
@@ -186,10 +186,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href=""></a><br>    
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://stageandsoundrentalco.github.io/americanmedspa.CoolSculpting-Deals-Midland-Achieve-the-Body-You-ve-Always-Wanted/">https://stageandsoundrentalco.github.io/americanmedspa.CoolSculpting-Deals-Midland-Achieve-the-Body-You-ve-Always-Wanted/</a><br>    
+                <a target="_bLank" href="https://americanmedspacloudstack.s3.us-east-005.backblazeb2.com/CoolSculpting+Deals+Midland:+Achieve+the+Body+You%E2%80%99ve+Always+Wanted+with+American+Laser+Med+Spa1/index.html">https://americanmedspacloudstack.s3.us-east-005.backblazeb2.com/CoolSculpting+Deals+Midland:+Achieve+the+Body+You%E2%80%99ve+Always+Wanted+with+American+Laser+Med+Spa1/index.html</a><br>
+                <a target="_bLank" href="https://americanmedspa-cool-git-54eea3-stageandsoundrentalcos-projects.vercel.app/">https://americanmedspa-cool-git-54eea3-stageandsoundrentalcos-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://frabjous-conkies-ea5c80.netlify.app/">https://frabjous-conkies-ea5c80.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
